--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
 /* You can add global styles to this file, and also import other style files */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
