--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,4 +1,10 @@
-<div class="login">
+<div class="login flex-column">
+    <div class="login-header d-flex flex-column justify-content-center text-center">
+        <img src="img/logo/logo.svg" alt="logo">
+        <h2>SNF Water Science</h2>
+        <p>ERP Procurement System</p>
+        <p>Secure Role-Based Access</p>
+    </div>
     <div class="login-container">
         
     </div>
