--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -6,6 +6,17 @@
         <p>Secure Role-Based Access</p>
     </div>
     <div class="login-container">
-        
+        <h6 class="mb-3 text-center">Sign In to Your Account</h6>
+        <span class="mb-3">
+            <label class="mb-1">Email</label>
+            <input type="email" class="form-control email" placeholder="Enter your email" required>
+        </span>
+        <span class="mb-3">
+            <label class="mb-1">Password</label>
+            <input type="password" class="form-control password" placeholder="Enter your password" required>
+        </span>
+        <span class="py-3">
+            <button class="btn btn-primary w-100">Sign In</button>
+        </span>
     </div>
 </div>
