--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -5,18 +5,29 @@
         <p>ERP Procurement System</p>
         <p>Secure Role-Based Access</p>
     </div>
+
     <div class="login-container">
         <h6 class="mb-3 text-center">Sign In to Your Account</h6>
-        <span class="mb-3">
+
+        <span class="mb-3 d-block">
             <label class="mb-1">Email</label>
-            <input type="email" class="form-control email" placeholder="Enter your email" required>
-        </span>
-        <span class="mb-3">
+            <div class="input-group-custom">
+                <i class="bi bi-envelope input-icon"></i>
+                <input type="email" class="form-control" placeholder="Enter your email" required>
+            </div>
+        </span> 
+
+        <span class="mb-3 d-block">
             <label class="mb-1">Password</label>
-            <input type="password" class="form-control password" placeholder="Enter your password" required>
+            <div class="input-group-custom">
+                <i class="bi bi-key input-icon"></i>
+                <input type="email" class="form-control" placeholder="Enter your password" required>
+            </div>
         </span>
+ 
         <span class="py-3">
             <button class="btn btn-primary w-100">Sign In</button>
         </span>
     </div>
+
 </div>
