--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -25,7 +25,7 @@
             </div>
         </span>
  
-        <span class="py-3">
+        <span class="py-3" (click)="signin()">
             <button class="btn btn-primary w-100">Sign In</button>
         </span>
     </div>
