--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -20,7 +20,7 @@
         <span class="mb-3 d-block">
             <label class="mb-1">Password</label>
             <div class="input-group-custom">
-                <i class="bi bi-key input-icon"></i>
+                <i class="bi bi-lock input-icon"></i>
                 <input type="email" class="form-control" placeholder="Enter your password" required>
             </div>
         </span>
