--- a/src/app/components/login/login.scss
+++ b/src/app/components/login/login.scss
@@ -51,6 +51,7 @@
     h6{
         color: #1c398e !important;
         font-weight: 400 !important;
+        font-size: 14px;
     }
     &:hover{
         box-shadow: 0 0 15px rgba(189,218,255, 0.2);
