dashboard, side-menu

--- a/src/app/components/side-menu/side-menu.html
+++ b/src/app/components/side-menu/side-menu.html
@@ -1,1 +1,13 @@
-<p>side-menu works!</p>
+<div class="container-fulid">
+    <div class="row vh-100">
+        <div class="d-flex starter">
+            <span class="bg-blue">
+                <img src="img/logo/logo.svg" width="40" height="40" alt="">
+            </span>
+            <span class="d-flex flex-column maintitle">
+                <h2>SNF ERP</h2>
+                <p>Procurement System</p>
+            </span>
+        </div>
+    </div>
+</div>
