--- a/src/app/components/dashboard/dashboard.html
+++ b/src/app/components/dashboard/dashboard.html
@@ -1,1 +1,10 @@
-<p>dashboard works!</p>
+<div class="container-fluid">
+    <div class="row">        
+        <div class="col-2">
+            <app-side-menu></app-side-menu>
+        </div>
+        <div class="col-10">
+                <p>dashboard works</p>
+        </div>
+    </div>
+</div>
