--- a/src/app/components/side-menu/side-menu.html
+++ b/src/app/components/side-menu/side-menu.html
@@ -1,12 +1,22 @@
-<div class="container-fulid">
-    <div class="row vh-100">
-        <div class="d-flex starter">
+<div class="container-fulid borderend">
+    <div class="row gap-3">
+        <div class="d-flex starter gap-3 align-items-center">
             <span class="bg-blue">
                 <img src="img/logo/logo.svg" width="40" height="40" alt="">
             </span>
             <span class="d-flex flex-column maintitle">
                 <h2>SNF ERP</h2>
                 <p>Procurement System</p>
+            </span>
+        </div>
+        <div class="d-flex nextdeprt">
+            <span class="bg-blue d-flex flex-column">
+                <img src="img/logo/logo.svg" width="40" height="40" alt="">
+                <button class="btn btn-succes p-0">Buyer</button>
+            </span>
+            <span class="d-flex flex-column details">
+                <h3>UserName</h3>
+                <p>Procurement</p>
             </span>
         </div>
     </div>
