--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,4 +13,6 @@
     --sidedep: 10px;
     --blue:#155dfc;
     --borderblue:#bedbff;
+    --success: #dcfce7;
+    --text-success: #016630 !important;
 }
