--- a/src/app/components/login/login.scss
+++ b/src/app/components/login/login.scss
@@ -85,3 +85,9 @@
     z-index: 3;
     color: #155dfc !important;
 }
+
+@media(max-width: 768px){
+    .login-container{
+        max-width: 300px!important;
+    }
+}
