--- a/src/app/components/side-menu/side-menu.html
+++ b/src/app/components/side-menu/side-menu.html
@@ -1,6 +1,6 @@
-<div class="container-fulid borderend">
-    <div class="row gap-3">
-        <div class="d-flex starter gap-3 align-items-center">
+<div class="container-fluid borderend">
+    <div class="row">
+        <div class="d-flex box gap-3 align-items-center">
             <span class="bg-blue">
                 <img src="img/logo/logo.svg" width="40" height="40" alt="">
             </span>
@@ -9,15 +9,17 @@
                 <p>Procurement System</p>
             </span>
         </div>
-        <div class="d-flex nextdeprt">
-            <span class="bg-blue d-flex flex-column">
-                <img src="img/logo/logo.svg" width="40" height="40" alt="">
-                <button class="btn btn-succes p-0">Buyer</button>
+        <div class="d-flex box borderbottom gap-3 align-items-center">
+            <span class="">
+                <img src="img/logo/user.png" width="40" height="40" alt="">
             </span>
             <span class="d-flex flex-column details">
                 <h3>UserName</h3>
                 <p>Procurement</p>
             </span>
-        </div>
-    </div>
+            <button class=" professional text-white px-2">Buyer</button>
+        </div> 
+</div>
+<div class="row m-1 bg-dark vh-100"> 
+    
 </div>
