--- a/src/app/components/side-menu/side-menu.html
+++ b/src/app/components/side-menu/side-menu.html
@@ -17,9 +17,39 @@
                 <h3>UserName</h3>
                 <p>Procurement</p>
             </span>
-            <button class=" professional text-white px-2">Buyer</button>
+            <button class=" professional px-2">Buyer</button>
         </div> 
 </div>
-<div class="row m-1 bg-dark vh-100"> 
-    
+<div class="row m-1 vh-100"> 
+    <ul class="nav flex-column">
+        <li class="nav-item" >
+            <a href="#" class="d-flex align-items-center gap-3 nav-link p-0">
+                <i class="bi bi-house-door"></i>
+                <span>
+                    <span>Dashboard</span>
+                    <p>Overview & metrics</p>
+                </span>
+            </a>
+        </li>
+        <li class="nav-item" >
+            <a href="#" class="d-flex align-items-center gap-3 nav-link p-0">
+                <i class="bi bi-plus-circle"></i>
+                <span>
+                    <span>Create Proposal</span>
+                    <p>New procurement request</p>
+                </span>
+            </a>
+        </li>
+        <li class="nav-item" >
+            <a href="#" class="d-flex align-items-center gap-3 nav-link p-0">
+                <i class="bi bi-clipboard"></i>
+                <span>
+                    <span>My Proposals</span>
+                    <p>Track your requests</p>
+                </span>
+            </a>
+        </li>
+        <li></li>
+        <li></li>
+    </ul>
 </div>
