--- a/src/app/components/side-menu/side-menu.html
+++ b/src/app/components/side-menu/side-menu.html
@@ -21,7 +21,7 @@
         </div> 
 </div>
 <div class="row m-1 vh-100"> 
-    <ul class="nav flex-column">
+    <ul class="nav flex-column position-position">
         <li class="nav-item" routerLinkActive="active-link">
             <a class="d-flex align-items-center gap-3 nav-link p-0" routerLink="dashboard">
               <i class="bi bi-house-door"></i>
@@ -50,7 +50,9 @@
                 </div>
             </a>
         </li>
-        <li></li>
-        <li></li>
+        <ul class="nav flex-column gap-3 menudown">
+        <li  class="nav-item d-flex gap-3" ><i class="bi bi-gear"></i>Settings</li>
+        <li  class="nav-item  d-flex gap-3" ><i class="bi bi-box-arrow-in-right"></i>Sign Out</li>
+    </ul>
     </ul>
 </div>
